# mlops_project

./: .gitignore  Dockerfile  README.md  load_model.py  pyproject.toml
src/: config.py  main.py  settings.json
src/application/: app.py  routers.py  utils.py
tests/: test_scoring.py
