[tool.poetry]
name = "pet-service"
version = "0.1.0"
description = ""
authors = ["Daniil Serov <zendrokalash1313@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
loguru = "^0.6.0"
pandas = "^1.4.2"
fastapi = "^0.76.0"
dynaconf = "^3.1.8"
uvicorn = "^0.17.6"
uuid = "^1.30"
spacy = "^3.3.0"
transformers = "^4.19.2"
torch = "^1.11.0"
gdown = "^4.4.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
